--- a/trunk/compiler/makefile
+++ b/trunk/compiler/makefile
@@ -4,9 +4,9 @@ CC   = g++
 CCFLAGS = -DCPLUSPLUS -g  # for use with C++ if file ext is .cc
 CFLAGS = -DCPLUSPLUS -g  # for use with C++ if file ext is .c
 
-HDRS = globals.h
-SRCS = $(BIN).y globals.cc  $(BIN).l
-OBJS = lex.yy.o globals.o  $(BIN).tab.o
+HDRS = globals.h symtab.h
+SRCS = $(BIN).y.cpp globals.cpp symtab.cpp $(BIN).l.cpp
+OBJS = lex.yy.o globals.o symtab.o $(BIN).tab.o
 LIBS = -lfl -lm 
 
 $(BIN): $(OBJS)
@@ -17,13 +17,13 @@ $(BIN).tab.h $(BIN).tab.c: $(BIN).y
 
 lex.yy.c: $(BIN).l $(BIN).tab.h
 	flex $(BIN).l  # -d debug
-
+	
 all:    
 	touch $(SRCS)
 	make
 
 clean:
-	rm -f $(OBJS) $(BIN) $(BIN).output lex.yy.c $(BIN).tab.h $(BIN).tab.c $(BIN).tar core
+	rm -f $(OBJS) $(BIN) $(BIN).output lex.yy.c $(BIN).tab.h $(BIN).tab.c cpermann.tar core
 
 tar:
 	tar -cvf $(TARNAME).tar $(SRCS) $(HDRS)  makefile
