--- a/trunk/compiler/makefile
+++ b/trunk/compiler/makefile
@@ -4,9 +4,9 @@ CC   = g++
 CCFLAGS = -DCPLUSPLUS -g  # for use with C++ if file ext is .cc
 CFLAGS = -DCPLUSPLUS -g  # for use with C++ if file ext is .c
 
-HDRS = globals.h symtab.h emitcode.h compiler.h
-SRCS = $(BIN).y.cpp globals.cpp symtab.cpp emitcode.cpp compiler.cpp $(BIN).l.cpp
-OBJS = lex.yy.o globals.o symtab.o emitcode.o compiler.o $(BIN).tab.o
+HDRS = syntaxtree.h symtab.h emitcode.h compiler.h
+SRCS = $(BIN).y.cpp syntaxtree.cpp symtab.cpp emitcode.cpp compiler.cpp $(BIN).l.cpp
+OBJS = lex.yy.o syntaxtree.o symtab.o emitcode.o compiler.o $(BIN).tab.o
 LIBS = -lfl -lm 
 
 .cpp.o:
